# BetaFX

./: Readme
COMP308_ASS3_BUILD_DIR/assets/: .directory  cross.tga  frame.mtl  rose.mtl  roses.mtl  stem.mtl  w.xcf
COMP308_ASS3_SRC/: CMakeLists.txt
COMP308_ASS3_SRC/glsl/: paint.frag  paint.geom  paint.vert  phong.frag  phong.vert  textured.frag  textured.geom  textured.vert
COMP308_ASS3_SRC/src/: .directory  define.h  test.cpp  util.h
COMP308_ASS3_SRC/src/buffer/: Buffer.h
COMP308_ASS3_SRC/src/components/: Camera.cpp  Camera.h  Component.h  Mesh.cpp  Mesh.h  Texture.cpp  Texture.h
COMP308_ASS3_SRC/src/control/: Arcball.cpp  Arcball.h
COMP308_ASS3_SRC/src/load/: ObjLoader.cpp  ObjLoader.h
COMP308_ASS3_SRC/src/pipeline/: Pipeline.cpp  Pipeline.h
COMP308_ASS3_SRC/src/shader/: Shader.cpp  Shader.h
